--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ h1 {
   justify-content: center;
   align-items: center;
   font-size: 30px;
+  transition: background-color;
+  transition-delay: 0.5;
+  transition-duration: 1s;
 }
 
-.box {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
+.on {
+  background-color: salmon;
 }
 
 .start {
