--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ h1 {
 
 .container {
   margin: 0 auto;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .cell {
   width: 100px;
   height: 100px;
-  border: 1px solid lightgrey;
+  /* border: 1px solid lightgrey; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,9 +35,17 @@ h1 {
 
 
 .start {
-  font-size: 30px;
-  background-color: lightgreen;
-  border-radius: 10px;
-  width: 100px;
-  outline: none;
+  font-size: 20px;
+  width: 80px;
+}
+
+.reload {
+  font-size: 20px;
+  width: 80px;
+  display: none;
+}
+
+textarea {
+  font-size: 20px;
+  text-align: center;
 }
