disbled start button

--- a/style.css
+++ b/style.css
@@ -48,11 +48,13 @@ h1 {
 .start {
   font-size: 20px;
   width: 80px;
+  user-select: none;
 }
 
 .reload {
   font-size: 20px;
   width: 80px;
+  user-select: none;
 }
 
 textarea {
